--- a/products.html
+++ b/products.html
@@ -28,6 +28,17 @@
 </head>
 
 <body>
+<div class="top">
+  <div class="container">
+      <span class="name">
+        <p>安徽省品驾酒业有限公司</p>
+      </span>
+    <span class="tuijian">
+        <p>CCTV央视荣誉播出品牌</p>
+        <p>全国招商电话：400-0558-979</p>
+      </span>
+  </div>
+</div>
   <div class="Navbar">
     <div class="container">
       <div class="logo"><a href="#"><img src="./images/log.png" alt="" width=60 height = 60></a></div>
@@ -56,92 +67,106 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/products/zhengcang16-2.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>珍藏原浆</h4>
-                <a href="#">品驾牌-珍藏原浆十六年</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥368</span> </span>
-                  <span>抢购价：<span>￥188</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/587215736456.html?spm=a2615.2177701.autotrace-offerGeneral.11.50af1504DW8hmg">
+                <img src="./images/products/zhengcang16-2.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>珍藏原浆</h4>
+                  <span style="color: #8f0002">品驾牌-珍藏原浆十六年</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥368</span> </span>
+                    <span>抢购价：<span>￥188</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/products/pinjiayupei.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒-玉佩</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥780</span> </span>
-                  <span>抢购价：<span>￥320</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/580848500870.html?spm=a2615.2177701.autotrace-newCustomContent.1.50af1504DW8hmg">
+                <img src="./images/products/pinjiayupei.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>品驾贡酒</h4>
+                  <span style="color: #8f0002">品驾牌-品驾贡酒-玉佩</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥780</span> </span>
+                    <span>抢购价：<span>￥320</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-3.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>窖藏老酒</h4>
-                <a href="#">品驾牌-窖藏十年老酒</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥2688</span> </span>
-                  <span>抢购价：<span>￥888</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/587825979890.html?spm=a2615.2177701.autotrace-offerGeneral.3.50af1504DW8hmg">
+                <img src="./images/title-3.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>窖藏老酒</h4>
+                  <span style="color: #8f0002">品驾牌-窖藏十年老酒</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥2688</span> </span>
+                    <span>抢购价：<span>￥888</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/products/pinjia10-3.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒十年</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥380</span> </span>
-                  <span>抢购价：<span>￥298</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/587996347111.html?spm=a2615.2177701.autotrace-offerGeneral.7.50af1504DW8hmg">
+                <img src="./images/products/pinjia10-3.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>品驾贡酒</h4>
+                  <span style="color: #8f0002">品驾牌-品驾贡酒十年</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥380</span> </span>
+                    <span>抢购价：<span>￥298</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/products/zhengcang30.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>珍藏原浆</h4>
-                <a href="#">品驾牌-珍藏原浆二十年</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥398</span> </span>
-                  <span>抢购价：<span>￥198</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/587544382880.html?spm=a2615.2177701.autotrace-offerGeneral.1.50af1504DW8hmg">
+                <img src="./images/products/zhengcang30.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>珍藏原浆</h4>
+                  <span style="color: #8f0002">品驾牌-珍藏原浆二十年</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥398</span> </span>
+                    <span>抢购价：<span>￥198</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/products/pinjia8-2.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒八年</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥360</span> </span>
-                  <span>抢购价：<span>￥288</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/587998719997.html?spm=a2615.2177701.autotrace-offerGeneral.9.50af1504DW8hmg">
+                <img src="./images/products/pinjia8-2.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>品驾贡酒</h4>
+                  <span style="color: #8f0002">品驾牌-品驾贡酒八年</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥360</span> </span>
+                    <span>抢购价：<span>￥288</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-5.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>内部特供</h4>
-                <a href="#">品驾牌-内部接待用酒</a>
-                <p class="content-price">
-                  <span>抢购价：<span>￥88</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/587610617069.html?spm=a2615.2177701.autotrace-offerGeneral.7.50af1504DW8hmg">
+                <img src="./images/title-5.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>内部特供</h4>
+                  <span style="color: #8f0002">品驾牌-内部接待用酒</span>
+                  <p class="content-price">
+                    <span>抢购价：<span>￥88</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
         </div>
@@ -163,7 +188,7 @@
       <div class="col-md-4 col-md-offset-4">
         <p class="col-md-12">品驾酒有限公司</p>
         <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
+        <p class="col-md-12">Copyright © 2019 pinjiajiu. All rights reserved. </p>
       </div>
     </div>
   </div>
