--- a/about.html
+++ b/about.html
@@ -50,6 +50,17 @@
 </head>
 
 <body>
+<div class="top">
+  <div class="container">
+      <span class="name">
+        <p>安徽省品驾酒业有限公司</p>
+      </span>
+    <span class="tuijian">
+        <p>CCTV央视荣誉播出品牌</p>
+        <p>全国招商电话：400-0558-979</p>
+      </span>
+  </div>
+</div>
   <div class="Navbar">
     <div class="container">
       <div class="logo"><a href="#"><img src="./images/log.png" alt="" width=60 height = 60></a></div>
@@ -75,7 +86,7 @@
         <div class="col-md-6">
           <ul class="about_text">
             <li>
-              <h4 style='font-weight: bold'>亳州市品驾酒业有限公司</h4></li>
+              <h4 style='font-weight: bold'>安徽省品驾酒业有限公司</h4></li>
             <li>厂址：安徽省亳州市谯城区古井镇三曹路9号</li>
             <li>法定代表人：孙管</li>
             <li>手机：19965999699</li>
@@ -89,10 +100,6 @@
       <div class="about_weixin">
         <h3 style='margin: 40px; font-weight:bold; color: #555'>品驾酒负责人微信，扫一扫添加好友：</h3>
         <img src="./images/company/weixin.jpg" alt="微信" width=674 height=896>
-      </div>
-      <div class="about_weixin">
-        <h3 style='margin: 40px; font-weight:bold; color: #555'>亳州市管达蛋白饲料有限公司</h3>
-        <img src="./images/company/gongsi.jpg" alt="微信" width=674 height=896>
       </div>
     </div>
   </div>
@@ -109,9 +116,9 @@
   <div class="footer">
     <div class="footer-bottom">
       <div class="col-md-4 col-md-offset-4">
-        <p class="col-md-12">品驾酒有限公司</p>
-        <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
+        <p class="col-md-12">安徽省品驾酒有限公司</p>
+        <p class="col-md-12">版权均归 安徽省品驾酒有限公司所有</p>
+        <p class="col-md-12">Copyright © 2019 pinjiajiu. All rights reserved. </p>
       </div>
     </div>
   </div>
