--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="keywords" content="品驾酒,古井镇白酒,白酒,窖藏老酒,珍藏原浆" />
-  <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
+  <title title="品驾酒">安徽省品驾酒就业有限公司-全力打造古井镇第二大白酒品牌</title>
   <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/main.css">
@@ -17,6 +17,17 @@
 </head>
 
 <body>
+  <div class="top">
+    <div class="container">
+      <span class="name">
+        <p>安徽省品驾酒业有限公司</p>
+      </span>
+      <span class="tuijian">
+        <p>CCTV央视荣誉播出品牌</p>
+        <p>全国招商电话：400-0558-979</p>
+      </span>
+    </div>
+  </div>
   <div class="Navbar">
     <div class="container">
       <div class="logo"><a href="#"><img src="./images/log.png " alt="" width=60 height = 60></a></div>
@@ -47,6 +58,32 @@
     </div>
   </div>
   <div class="container">
+    <div class="title0">
+      <div class="title-header">
+        <div class="row">
+          <p class="col-md-5 title-line"></p>
+          <h3 class="col-md-2 text-center">品牌推广</h3>
+          <p class="col-md-5 title-line"></p>
+        </div>
+      </div>
+      <hr>
+      <div class="popularize">
+        <div class="video">
+          <video controls width="100%" height="100%">
+            <source src="./images/video.mp4">
+            <object type="video/mp4" data="./images/video.mp4">
+              <param name="src" value="./images/video.mp4">
+              <param name="autoplay" value="false">
+              <param name="autoStart" value="0">
+              <p><a href="./images/video.mp4">Download this video file.</a></p>
+            </object>
+          </video>
+        </div>
+        <div class="photo">
+          <img src="./images/mmexport1551532203144.jpg" alt="">
+        </div>
+      </div>
+    </div>
     <div class="title1">
       <div class="title-header">
         <div class="row">
@@ -59,54 +96,62 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587215736456.html?spm=a2615.2177701.autotrace-offerGeneral.11.50af1504DW8hmg">
               <img src="./images/products/zhengcang16-3.png" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
-                <a href="#">品驾牌-珍藏原浆十六年</a>
+                <span style="color: #8f0002">品驾牌-珍藏原浆十六年</span>
                 <p class="content-price">
                   <span class="saoma">扫码价：<span>￥368</span> </span>
                   <span>抢购价：<span>￥188</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
-              <img src="./images/title-2.jpg" width=255 height=255>
-              <div class="caption">
-                <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒-玉佩</a>
-                <p class="content-price">
-                  <span class="saoma">扫码价：<span>￥780</span> </span>
-                  <span>抢购价：<span>￥320</span> </span>
-                </p>
-              </div>
+              <a href="https://detail.1688.com/offer/580848500870.html?spm=a2615.2177701.autotrace-newCustomContent.1.50af1504DW8hmg">
+                <img src="./images/title-2.jpg" width=255 height=255>
+                <div class="caption">
+                  <h4>品驾贡酒</h4>
+                  <span style="color: #8f0002">品驾牌-品驾贡酒-玉佩</span>
+                  <p class="content-price">
+                    <span class="saoma">扫码价：<span>￥780</span> </span>
+                    <span>抢购价：<span>￥320</span> </span>
+                  </p>
+                </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587825979890.html?spm=a2615.2177701.autotrace-offerGeneral.3.50af1504DW8hmg">
               <img src="./images/title-9.jpg" width=255 height=255>
               <div class="caption">
                 <h4>窖藏老酒</h4>
-                <a href="#">品驾牌-窖藏十年老酒</a>
+                <span style="color: #8f0002">品驾牌-窖藏十年老酒</span>
                 <p class="content-price">
                   <span class="saoma">扫码价：<span>￥2688</span> </span>
                   <span>抢购价：<span>￥888</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587996347111.html?spm=a2615.2177701.autotrace-offerGeneral.7.50af1504DW8hmg">
               <img src="./images/products/pinjia10-2.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒十年</a>
+                <span style="color: #8f0002">品驾牌-品驾贡酒十年</span>
                 <p class="content-price">
                   <span class="saoma">扫码价：<span>￥380</span> </span>
                   <span>抢购价：<span>￥298</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
         </div>
@@ -124,53 +169,61 @@
         <div class="row">
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587544382880.html?spm=a2615.2177701.autotrace-offerGeneral.1.50af1504DW8hmg">
               <img src="./images/products/zhengcang30.jpg" width=255 height=255>
               <div class="caption">
                 <h4>珍藏原浆</h4>
-                <a href="#">品驾牌-珍藏原浆二十年</a>
+                <span style="color: #8f0002">品驾牌-珍藏原浆二十年</span>
                 <p class="content-price">
                   <span class="saoma">扫码价：<span>￥398</span> </span>
                   <span>抢购价：<span>￥198</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587998719997.html?spm=a2615.2177701.autotrace-offerGeneral.9.50af1504DW8hmg">
               <img src="./images/products/pinjia8-3.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒八年</a>
+                <span style="color: #8f0002">品驾牌-品驾贡酒八年</span>
                 <p class="content-price">
                   <span class="saoma">扫码价：<span>￥360</span> </span>
                   <span>抢购价：<span>￥288</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587996347111.html?spm=a2615.2177701.autotrace-offerGeneral.7.50af1504DW8hmg">
               <img src="./images/products/pinjia10-3.jpg" width=255 height=255>
               <div class="caption">
                 <h4>品驾贡酒</h4>
-                <a href="#">品驾牌-品驾贡酒十年</a>
+                <span style="color: #8f0002">品驾牌-品驾贡酒十年</span>
                  <p class="content-price">
                   <span class="saoma">扫码价：<span>￥380</span> </span>
                   <span>抢购价：<span>￥298</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
           <div class="col-md-3">
             <div class="thumbnail">
+              <a href="https://detail.1688.com/offer/587610617069.html?spm=a2615.2177701.autotrace-offerGeneral.7.50af1504DW8hmg">
               <img src="./images/title-5.jpg" width=255 height=255>
               <div class="caption">
                 <h4>内部特供</h4>
-                <a href="#">品驾牌-内部接待用酒</a>
+                <span style="color: #8f0002">品驾牌-内部接待用酒</span>
                 <p class="content-price">
                   <span>抢购价：<span>￥88</span> </span>
                 </p>
               </div>
+              </a>
             </div>
           </div>
         </div>
@@ -305,7 +358,7 @@
       <div class="col-md-4 col-md-offset-4">
         <p class="col-md-12">品驾酒有限公司</p>
         <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
+        <p class="col-md-12">Copyright © 2019 pinjiajiu. All rights reserved. </p>
       </div>
     </div>
   </div>
