--- a/join.html
+++ b/join.html
@@ -58,6 +58,17 @@
 </head>
 
 <body>
+<div class="top">
+  <div class="container">
+      <span class="name">
+        <p>安徽省品驾酒业有限公司</p>
+      </span>
+    <span class="tuijian">
+        <p>CCTV央视荣誉播出品牌</p>
+        <p>全国招商电话：400-0558-979</p>
+      </span>
+  </div>
+</div>
   <div class="Navbar">
     <div class="container">
       <div class="logo"><a href="#"><img src="./images/log.png" alt="" width=60 height = 60></a></div>
@@ -139,7 +150,7 @@
       <div class="col-md-4 col-md-offset-4">
         <p class="col-md-12">品驾酒有限公司</p>
         <p class="col-md-12">版权均归 品驾酒有限公司所有</p>
-        <p class="col-md-12">Powered by Ls365 v8.0.7 ©2017-2019</p>
+        <p class="col-md-12">Copyright © 2019 pinjiajiu. All rights reserved. </p>
       </div>
     </div>
   </div>
