--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="keywords" content="品驾酒,古井镇白酒,白酒,窖藏老酒,珍藏原浆" />
-  <title title="品驾酒">安徽省品驾酒就业有限公司-全力打造古井镇第二大白酒品牌</title>
+  <title title="品驾酒">安徽省品驾酒业有限公司</title>
   <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/main.css">
@@ -21,6 +21,7 @@
     <div class="container">
       <span class="name">
         <p>安徽省品驾酒业有限公司</p>
+        <p class="En">ANHUI PINJIA LIQUOR INDUSTRY CO.,LTD</p>
       </span>
       <span class="tuijian">
         <p>CCTV央视荣誉播出品牌</p>
