--- a/introduction.html
+++ b/introduction.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
   <meta charset="UTF-8">
-  <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
+  <title title="品驾酒">安徽省品驾酒业有限公司</title>
   <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
@@ -81,6 +81,7 @@
   <div class="container">
       <span class="name">
         <p>安徽省品驾酒业有限公司</p>
+        <p class="En">ANHUI PINJIA LIQUOR INDUSTRY CO.,LTD</p>
       </span>
     <span class="tuijian">
         <p>CCTV央视荣誉播出品牌</p>
@@ -119,9 +120,9 @@
         <ul class="ul1">
           <li>
             <h3 class="page-header text-center">生产商简介</h3></li>
-          <li>亳州市品驾酒业有限责任公司位于中国名酒之乡---安徽亳州。安徽亳州是国家历史文化名城，具有三千七百多年的历史。自古以来，人杰地灵，物华天宝，道教先哲老子、庄子、一代英豪曹操、神医华佗皆诞生于此。古井镇为安徽白酒第一镇，享誉“中国酒城”之称。正是亳州优质的地下泉水，肥沃的土壤，适宜的酿酒环境，才酿造出绵、甜、净、爽的品驾酒。</li>
+          <li>安徽省品驾酒业有限公司位于中国名酒之乡---安徽亳州。安徽亳州是国家历史文化名城，具有三千七百多年的历史。自古以来，人杰地灵，物华天宝，道教先哲老子、庄子、一代英豪曹操、神医华佗皆诞生于此。古井镇为安徽白酒第一镇，享誉“中国酒城”之称。正是亳州优质的地下泉水，肥沃的土壤，适宜的酿酒环境，才酿造出绵、甜、净、爽的品驾酒。</li>
           <li><img src="./images/intro-1.jpg" alt="" width=680 height=240></li>
-          <li>亳州市品驾酒业有限责任公司是一家以生产浓香型白酒为核心业务，并集包装、销售、研发为一体的大型酒业公司。公司创立于1978年，三十多年励精图治，三十多年成果辉煌。今日的品驾酒业，占地面积500余亩，职工700余人，其中专业技术人员65人。品驾酒业拥有最先进的白酒科研、化验设备，有发酵池1600条、现代化生产流水线4条，三个酿酒基地，年产优质曲酒上万吨、原酒储备2万吨。生产的优质曲酒主要供应全国各大知名酒厂，并以品牌形式奉献给全国的忠实消费者。</li>
+          <li>安徽省品驾酒业有限公司是一家以生产浓香型白酒为核心业务，并集包装、销售、研发为一体的大型酒业公司。公司创立于1978年，三十多年励精图治，三十多年成果辉煌。今日的品驾酒业，占地面积500余亩，职工700余人，其中专业技术人员65人。品驾酒业拥有最先进的白酒科研、化验设备，有发酵池1600条、现代化生产流水线4条，三个酿酒基地，年产优质曲酒上万吨、原酒储备2万吨。生产的优质曲酒主要供应全国各大知名酒厂，并以品牌形式奉献给全国的忠实消费者。</li>
           <li><img src="./images/intro-2.jpg" width=680 height=240></li>
           <li>一流的科学规划设计厂区，一流的先进设备、技术与理念，一流的管理和专业人才，使品驾酒业在短短的三十多年间，便成功跻身区域白酒名企行列。</li>
           <li><img src="./images/intro-3.jpg" width=680 height=240></li>
