--- a/join.html
+++ b/join.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
   <meta charset="UTF-8">
-  <title title="品驾酒">品驾酒-全力打造古井镇第二大白酒品牌</title>
+  <title title="品驾酒">安徽省品驾酒业有限公司</title>
   <link rel="shortcut icon" type="text/css" href="./images/log.png">
   <link rel="stylesheet" href="./bs/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./bs/css/public.css">
@@ -62,6 +62,7 @@
   <div class="container">
       <span class="name">
         <p>安徽省品驾酒业有限公司</p>
+        <p style="line-height: 40px; font-size: 18px">ANHUI PINJIA LIQUOR INDUSTRY CO.,LTD</p>
       </span>
     <span class="tuijian">
         <p>CCTV央视荣誉播出品牌</p>
